# AG-Trabalho

./: README.md  main.py  pyproject.toml
Datasets/: DisciplinasCCO.csv  DisciplinasECO.csv  DisciplinasSIN.csv  NAOAPAGAR.csv  ObrigatoriasCCO.csv  README.md
Front-Back/: index.html  script.js  style.css
Front-Back/back/: manage.py
Front-Back/backend/: app.py
Grafos/: Obrigatorias.py
Metodos/: 1_LeHistorico.py  2_CalculaPesos.py  2_InstanciaGrafoDirigido.py  3_CalculaPesos.py  3_ProcessaDataframe.py  4_ColoreVertices.py  4_FiltraDataframe.py  5_AdicionaArestas.py  5_InstanciaGrafoSimples.py  6_BFS.py  6_CalculaCIM.py  6_DFS.py  CalculaCIM.py  CalculaPesos.py  FiltraDisciplinas.py  FiltraTurmas.py  GeraGrafo.py  LeDataset.py  LeHistorico.py  MontaListaAdjDirigida.py  MontaListaAdjSimples.py  MontaMatrizAdjDirigida.py  MontaMatrizAdjSimples.py  README.md  __init__.py  matrizAdjSimples.py
Metodos/MWIS/: BranchAndBound.py
Metodos/mwis/: branchAndBound.py
Objetos/: Entidades.py  Equivalente.py  Expression.py  Historico.py  Horario.py  Optativa.py  PreRequisito.py  Vertice.py  __init__.py
Objetos/Entidades/: Disciplina.py  DisciplinaTurma.py  Turma.py  __init__.py
Testes/: test_Equivalente.py  test_Historico.py  test_PreRequisito.py
Testes/Metodos/: test_CalculaPesos.py  test_FiltraDisciplinas.py  test_FiltraTurmas.py  test_GeraGrafo.py  test_MontaListaAdjDirigida.py  test_MontaListaAdjSimples.py
Webserver/: server.py
Webserver/static/: script.js  style.css
test/: test_grafoSimples.py  test_horario.py  test_prerequisito.py
(+7 files in other folders)
