[project]
name = "agtrabalho"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "igraph>=0.11.8",
    "pandas>=2.2.3",
    "pycairo>=1.28.0",
    "pymupdf>=1.26.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
